objects/Cvent_Box__c.object
<CustomObject>
    <fields>
        <fullName>Cvent_Box_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cvent Box Type</label>
        <referenceTo>Cvent_Box_Type__c</referenceTo>
        <relationshipName>Cvent_Boxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimensions_cm__c</fullName>
        <formula>Cvent_Box_Type__r.Dimensions_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimensions (cm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimensions_in__c</fullName>
        <formula>Cvent_Box_Type__r.Dimensions_in__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimensions (in)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Label__c</fullName>
        <formula>text(Number_in_Packlist__c) + ' of ' +  text(Packlist__r.Count_Boxes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_in_Packlist__c</fullName>
        <label>Number in Packlist</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packlist__c</fullName>
        <label>Packlist</label>
        <referenceTo>Packlist__c</referenceTo>
        <relationshipName>Cvent_Boxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Piece Count</label>
    <nameField>
        <displayFormat>Box-{0}</displayFormat>
        <label>Piece Count</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Piece Count</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>